--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <div class="wrap">
     <header>
       <div>
-        <h1 style="margin:0">Allergen Webapp — PWA</h1>
-        <div class="footer">Offline-fähig · für GitHub Pages vorbereitet</div>
+        <h1 style="margin:0">Allergene</h1>
+        <div class="footer">Offline-fähig</div>
       </div>
       <div class="file-row">
         <label for="file" style="font-size:14px;color:var(--muted)">JSON hochladen</label>
