--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <!-- Babel for JSX in static file -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
+ <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<script type="text/babel" src="app.js"></script>
+  
   <style>
     :root{--bg:#f8fafc;--card:#fff;--muted:#6b7280;--accent:#0ea5a4}
     body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Noto Sans",sans-serif;margin:0;background:var(--bg);color:#0f172a}
@@ -38,7 +39,7 @@
     <header>
       <div>
         <h1 style="margin:0">Allergene</h1>
-        <div class="footer">Offline-fähig</div>
+        <div class="footer">Allergene in der Liste auswählen</div>
       </div>
       <div class="file-row">
         <label for="file" style="font-size:14px;color:var(--muted)">JSON hochladen</label>
