--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Allergen Webapp — PWA</title>
+  <title>Allergene</title>
 
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0ea5a4"/>
@@ -39,7 +39,7 @@
     <header>
       <div>
         <h1 style="margin:0">Allergene</h1>
-        <div class="footer">Allergene in der Liste auswählen</div>
+        <div class="footer">Allergene in der Liste auswählen und mit Zutaten abgleichen</div>
       </div>
       <div class="file-row">
         <label for="file" style="font-size:14px;color:var(--muted)">JSON hochladen</label>
