--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <main style="margin-top:14px">
-      <div id="root" class="card"></div>
+      <div id="root"></div>
     </main>
 
     <footer class="footer">Hinweis: Daten werden lokal im Browser gespeichert (localStorage).</footer>
