--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     // register service worker (works on GitHub Pages with HTTPS)
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/sw.js').then(function(reg){
+        navigator.serviceWorker.register('/Allergene/sw.js').then(function(reg){
           console.log('SW registered', reg.scope);
         }).catch(function(err){ console.log('SW registration failed', err);});
       });
