--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Allergene</title>
 
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="/Allergene/manifest.json" />
   <meta name="theme-color" content="#0ea5a4"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
@@ -55,7 +55,7 @@
     <footer class="footer">Hinweis: Daten werden lokal im Browser gespeichert (localStorage).</footer>
   </div>
 
-  <script type="text/babel" src="/app.js"></script>
+  <script type="text/babel" src="/Allergene/app.js"></script>
 
   <script>
     // register service worker (works on GitHub Pages with HTTPS)
